# AdvancedFluids

./: 3dCombined copy.cpp  3dCombined.cpp  CMakeLists.txt  Domain.cpp  Domain.h  Point.cpp  Point.h  README.md  RiemannTest.cpp  WavesDataPoint.cpp  WavesDataPoint.h  fluidConsts.h  graph1.csv  graph2.csv  hdf5plot.jl  makefile  optimisationIdeas.txt  plots1d.m  riemann.cpp  save2.csv  sodGraphs.m  testIterate.m  testvalues.cpp
1D/: Domain.cpp  Domain.h  Point.cpp  Point.h  WavesDataPoint.cpp  WavesDataPoint.h  optimisationIdeas.txt  plots1d.m  riemann.cpp  sodGraphs.m
2D/: 2dDomainTest.cpp  Cell.cpp  Cell.h  Domain2D.cpp  Domain2D.h  RiemannTest.cpp  SolveRiemann.cpp  SolveRiemann.h  ghostcells.m  help2d.txt  plotv.m  result2dplot.m  result2dplotnew.m  result2dplottime.jl  result2dplottime.m  result2dplottimedomains.jl  todo.txt
3D/: 3dDomain.cpp  Box.cpp  Box.h  Domain3D.cpp  Domain3D.h  SolveRiemann.cpp  SolveRiemann.h  result3dplottimedomains.jl  wallpressures.jl
benchmarks/: CMakeLists.txt  domainEulerSolver_benchmark.cpp  flux_benchmark.cpp  getGlobalIndex_benchmark.cpp  parallelDomainEulerSolver_benchmark.cpp
forces/: backwallbending.jl  bendingforce.jl  convergence.jl  goldleaf.jl  heatloss.jl  plotframes.jl
include/: constants.hpp
include/domain/: Domain.hpp  DomainPositioner.hpp
include/io/: HDF5Writer.hpp  XDMFWriter.hpp
include/solvers/: DomainEulerSolver.hpp  RiemannSolver.hpp
include/types/: ConservedState.hpp  Flux.hpp  State.hpp
include/utils/: Logger.hpp
scripts/: hdf5plot.jl
src/: main.cpp
src/domain/: Domain.cpp  DomainPositioner.cpp
src/io/: HDF5Writer.cpp  XDMFWriter.cpp
src/solvers/: DomainEulerSolver.cpp  RiemannSolver.cpp
src/types/: ConservedState.cpp  Flux.cpp  State.cpp
src/utils/: Logger.cpp
tests/: CMakeLists.txt
tests/solvers/: RiemannSolverTest.cpp
